--- a/app/src/main/res/layout/activity_introduction_screen.xml
+++ b/app/src/main/res/layout/activity_introduction_screen.xml
@@ -11,17 +11,22 @@
         android:id="@+id/introduction"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
         android:text="Introduction"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:layout_marginBottom="20dp"
         android:textSize="48dp" />
+
+    <ImageView
+        android:id="@+id/superSideKick"
+        android:layout_below="@+id/introduction"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/logo"
+        android:layout_centerInParent="true"/>
 
     <ScrollView
         android:id="@+id/ScrollView"
-        android:layout_below="@+id/introduction"
+        android:layout_below="@+id/superSideKick"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
