--- a/app/src/main/res/layout/fragment_about_screen.xml
+++ b/app/src/main/res/layout/fragment_about_screen.xml
@@ -8,7 +8,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:background="@drawable/gradient_bg"
-    tools:context="jwake.myapplication.AboutScreen$PlaceholderFragment">
+    tools:context="jwake.myapplication.AboutScreen$PlaceholderFragment"
+    >
 
     <TextView
         android:id="@+id/textView2"
@@ -17,8 +18,20 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:text="About"
+        android:text="About My Lil Sidekick"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textSize="54dp" />
-
+        android:textSize="40dp" />
+    <ScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textView2">
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/aboutparagraph"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:layout_below="@+id/textView2"
+        android:layout_centerHorizontal="true" />
+    </ScrollView>
 </RelativeLayout>
